--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,9 +6,13 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
+    <color name="grey">#4D4C4C</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="colorPrimary">#101c34</color>
-    <color name="colorPrimaryDark">#2BCC6F</color>
+
+    <color name="colorPrimary">#14326D</color>
+    <color name="colorPrimaryDark">#14326D</color>
+    <color name="colorSecondary">#124099</color>
+    <color name="colorSecondaryLight">#5E8AE1</color>
     <color name="colorAccent">#333333</color>
     <color name="colorPrimaryLight">#E9F8F1</color>
     <color name="colorWhite">#FFFFFF</color>
